# Healthcare-risk-assessment

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: analysis.ipynb
src/: analyzer.py  config.py  data_loader.py  rag_recommender.py  risk_scorer.py
